fix google map js to HTTPS

--- a/client/index.html
+++ b/client/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
-
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <meta name="description" content="Simple Map">
-    <meta name="keywords" content="ng-map,AngularJS,center">
-
-
-
-
-
-
-
-
-
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
+  <meta name="description" content="Simple Map">
+  <meta name="keywords" content="ng-map,AngularJS,center">
 	<link rel="stylesheet" type="text/css" href="./assets/css/mainView.css">
 	<link rel="stylesheet" href="./assets/css/dashboardView.css">
 	<link rel="stylesheet" href="./assets/css/routeSetupView.css">
 	<link rel="stylesheet" href="./assets/css/selectDriverView.css">
 	<link rel="stylesheet" href="./assets/css/loginView.css">
-
   <title>OpenSeat</title>
 </head>
 <body ng-app = 'openSeatApp'>
@@ -47,7 +34,7 @@
 	<script src = './components/routeSetup/routeSetupController.js'></script>
 	<script src = './components/selectDriver/selectDriverController.js'></script>
 	<script src = './components/routeSetup/geocodeConverter.js'></script>
-	<script src="http://maps.google.com/maps/api/js"></script>
+	<script src="https://maps.google.com/maps/api/js"></script>
 	<script src="./lib/ngmap/build/scripts/ng-map.min.js"></script>
 </body>
 </html>
