--- a/client/index.html
+++ b/client/index.html
@@ -49,5 +49,6 @@
 	<script src = './components/routeSetup/geocodeConverter.js'></script>
 	<script src="http://maps.google.com/maps/api/js"></script>
 	<script src="./lib/ngmap/build/scripts/ng-map.min.js"></script>
+	<script src="./lib/pickadate/lib/picker.time.js"></script>
 </body>
 </html>
