Fixing a merge conflict.

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 </head>
 <body ng-app = 'openSeatApp'>
 	<div class = 'logo'>	
-	  <h1>OpenSeat</h1>
+	  <p >OpenSeat</p>
 	</div>
 	<div class = 'menuBar'>
 	  <ul>
